# rpicar

./: .bazelrc  .gitignore  BUILD  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-rpicar  bazel-testlogs  build.sh  helpers.bash  move_robot.py  package-lock.json  package.json  run.sh  supervisord.conf  tsconfig.json  webpack.config.js
beetle/: BUILD
beetle/include/: car.h
beetle/src/: move_with_input.cc
build-tools/workspace/: default.bzl
build-tools/workspace/rpi_bazel/: repository.bzl
holster/: BUILD
holster/include/: error.h  mmap_management.h  mutex_queue.h  shared_memory_manager.h  socket_maker.h  timer.h  vector.h
holster/src/: client.cc  main.cc  server.cc
platform/: BUILD
platform/include/: rpi_gpio.h
platform/src/: main.cc
src/: main.cpp
tools/: BUILD  wheel_test.py
tools/workspace/: default.bzl
tools/workspace/rpi_bazel/: repository.bzl
ui/: BUILD.bazel  greeter.js  greeter.ts  index.html  index.tsx  package-lock.json  package.json  tsconfig.json
ui/components/AppBar/: AppBar.tsx  BUILD.bazel
www/: BUILD  index.html  index.js  server.py  shmem_test.py
