load("@npm//@bazel/typescript:index.bzl", "ts_library", "ts_devserver")

ts_library(name = "greeter", srcs = [":greeter.ts"], tsconfig = ":tsconfig.json",
node_modules="//:node_modules")

ts_devserver(
    name = "devserver",
    # We'll collect all the devmode JS sources from these TypeScript libraries
    deps = [":greeter"],
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = ["index.html"],
)