load("@npm//@bazel/typescript:index.bzl", "ts_library", "ts_devserver")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")


ts_library(name = "greeter", srcs = ["greeter.ts", "index.tsx"], tsconfig = ":tsconfig.json",
deps = ["//ui/components/AppBar:AppBar",
        "@npm//@types/react",
        "@npm//@types/react-dom",

	])

ts_devserver(
    name = "devserver",
    # We'll collect all the devmode JS sources from these TypeScript libraries
    deps = [":greeter"],
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = ["index.html"],
)
