package(default_visibility = ["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

sass_binary(
    name = "styles",
    src = "AppBar.scss",
)

ts_library(
    name = "AppBar",
    srcs = [
        "AppBar.tsx",
    ],
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
    ],
    data = [
    ],
)
